31 fix